--- a/css/main.css
+++ b/css/main.css
@@ -1,9 +1,232 @@
 body{
-
+    scroll-behavior: smooth;
+    margin: 0;
 }
+h1,h2{
+    font-family: 'Raleway', sans-serif;
+    /* border-style: inset; */
+    /* border-bottom: 3px solid #000; */
+    /* text-decoration-line: underline;  */
+    /* text-align: center;
+    padding: 10px; */
+}
+div.underline{
+    
+    border-bottom: 3px solid #000;
+}
+
+p{
+    font-family: 'Lato', sans-serif;
+    padding: 10px;
+}
+
+/* incomplete */
 nav{
+    width: 100%;
+    height: 75px;
+    position: fixed;
     background: #2b363b;
+    color: #fff;
+    z-index: 1;
+    /* clear: both; */
+}
+nav h1{
+    float: left;
+    padding-left: 15%;;
+    padding-top: 5px;
+}
+.nav2{
+    float: right;
+    width:400px;
+    padding-top: 13px;
+    padding-right: 150px;
+}
+nav ul{
+    
+    /* background: #eee; */
+}
+nav li{
+    font-family: 'Raleway', sans-serif;
+    font-weight: bold;
+    /* background: #ddd; */
+    display: inline;
+    list-style: none;
+    /* margin-right: 10%;  */
+    padding-right: 10px;
 }
 header{
+    padding-top: 75px;
     background: #00a97a;
+    color: #fff;
+    
+}
+.head-wrapper{
+    width: 100%;
+    /* display: flex;
+    align-items: row; */
+}
+
+.top-img{
+    margin-top: 40px;
+    position: relative;
+    left: 37.7%;
+    width: 25%;
+    display: block;
+    clear: both;
+    border-radius: 20px;
+}
+/* header h1{
+    margin-top: 25px;
+    text-align: center;
+    display: inline;
+    padding: 15px 10px;
+    border-bottom: 3px solid #fff;
+}
+header h2{
+    text-align: center;
+} */
+.head-text1 {
+    margin-top: 50px;
+    text-align: center;
+}
+.head-text1 h1{
+    font-size: 40px;
+    display: inline;
+    padding: 15px 10px;
+    border-bottom: 3px solid #fff;
+}
+.head-text1 h3{
+    margin-top: 40px;
+}
+.head-text2 {
+    margin-top: 150px;
+    text-align: center;
+}
+.head-text2 h2{
+    display: inline;
+    padding: 15px 10px;
+    border-bottom: 3px solid #fff;
+}
+.head-text2 p{
+    padding: 30px;
+    margin: 25px 100px;
+}
+main{
+    height: 150px;
+    clear: both;
+    
+}
+/* can't get the flex model to work */
+article{
+    
+    background: #00a97a;
+    color: #fff;
+}
+.testi1{
+    text-align: center;
+}
+.testi2{
+    text-align: center;
+    padding: 30px;
+    margin: 25px 100px;
+}
+aside{
+    /* width: 80%; */
+    padding: 20px 15%;
+    clear: both;
+}
+#f1 input{
+    height: 25px;
+    /* border: none; */
+    border-style: groove;
+    border-radius: 2px;
+    padding-left: 5px;
+}
+/* ??? some properties not working */
+.submit-button {
+    width: 50px;
+    height: 60px;
+    /* padding: 10px; */
+    text-align: center;
+    text-shadow: none;
+    background: #00a97a;
+    color: #fff;
+    border-style: outset;
+    border-radius: 15px;
+}
+#f1 label[name="label1"] {
+    grid-area: label1;
+}
+#f1 input[name="name"] {
+    grid-area: name;
+}
+#f1 label[name="label2"] {
+    grid-area: label2;
+}
+#f1 input[name="email"] {
+    grid-area: email;
+}
+#f1 label[name="label3"] {
+    grid-area: label3;
+}
+#f1 input[name="phone"] {
+    grid-area: phone;
+}
+#f1 label[name="label4"] {
+    grid-area: label4;
+}
+#f1 textarea {
+     grid-area: message;
+}
+#f1 input[type="submit"] {
+     grid-area: submit;
+}
+#f1 {
+    display: grid;
+    grid-template-areas:
+        'label1 label1 label1'
+        'name name name'
+        'label2 label2 label2'
+        'email email email'
+        'label3 label3 label3'
+        'phone phone phone'
+        'label4 label4 label4'
+        'message message message'
+        'message message message'
+        'message message message'
+        'message message message'
+        'message message message'
+        'message message message'
+        'message message message'
+        'message message message'
+
+        'submit submit submit';
+    grid-gap: 15px;
+    padding: 10px;
+}
+footer{
+    height:75px;
+    background: #2b363b;
+    color: #fff;
+    width: 100%;
+}
+footer h2{
+    float: left;
+    font-size: 14px;
+    padding-top: 17px;
+    padding-left: 15%;
+}
+footer ul{
+    float: right;
+    margin-right: 150px;
+    padding-top: 5px;
+}
+footer ul li{
+    /* float: right; */
+    list-style: none;
+    display: inline;
+    padding-left: 15px;
+}
+footer a{
+    color: #fff;;
 }
