--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,7 @@
-body{
+*{
     scroll-behavior: smooth;
+}
+body{
     margin: 0;
 }
 h1,h2{
@@ -41,9 +43,13 @@ nav h1{
     padding-top: 13px;
     padding-right: 150px;
 }
-nav ul{
-    
-    /* background: #eee; */
+nav a{
+    color: #fff;
+    text-decoration: none;
+}
+nav a:hover{
+    padding-bottom: 2px;
+    border-bottom: 2px solid #00a97a;
 }
 nav li{
     font-family: 'Raleway', sans-serif;
@@ -118,22 +124,40 @@ main{
 }
 /* can't get the flex model to work */
 article{
-    
     background: #00a97a;
     color: #fff;
 }
 .testi1{
+    padding-top: 35px;
     text-align: center;
+}
+.testi1 h1{
+    /* font-weight: 800; can't make it as bold as i want */
+    display: inline;
+    padding: 15px 10px;
+    border-bottom: 3px solid #fff;
 }
 .testi2{
     text-align: center;
     padding: 30px;
     margin: 25px 100px;
 }
+
+
 aside{
     /* width: 80%; */
     padding: 20px 15%;
     clear: both;
+}
+.contact-me{
+    text-align: center;
+    
+}
+
+aside h1{
+    display: inline;
+    padding: 15px 10px;
+    border-bottom: 3px solid #fff;
 }
 #f1 input{
     height: 25px;
@@ -182,6 +206,7 @@ aside{
      grid-area: submit;
 }
 #f1 {
+    margin-top: 60px;
     display: grid;
     grid-template-areas:
         'label1 label1 label1'
@@ -203,6 +228,22 @@ aside{
         'submit submit submit';
     grid-gap: 15px;
     padding: 10px;
+}
+.go-top{
+    width: 50px; 
+    height: 30px; 
+    /* background-color: #203356; */
+    position: fixed; 
+    bottom:5%; 
+    right: 1%;
+    padding-top: 10px;
+}
+.go-top a{
+    color: #ccc;
+}
+.button-center{
+    text-align: center;
+    
 }
 footer{
     height:75px;
