--- a/css/main.css
+++ b/css/main.css
@@ -75,8 +75,8 @@ header{
 .top-img{
     margin-top: 40px;
     position: relative;
-    left: 37.7%;
-    width: 25%;
+    left: 40.5%;
+    width: 18%;
     display: block;
     clear: both;
     border-radius: 20px;
@@ -121,6 +121,62 @@ main{
     height: 150px;
     clear: both;
     
+}
+main h1{
+    text-align: center;
+}
+.container{
+    width: 80%;
+    height: 100%;
+    margin: 80px auto;
+    overflow: auto;
+    /* clear: both; */
+}
+.slider-outer{
+    margin-left: 100px;
+    /* text-align: center; */
+}
+.slider-inner{
+    width: 800px;
+    height: 400px;
+    position: relative;
+    overflow: hidden;
+    margin: 0 auto;
+    display: inline;
+    float: left;
+    padding: 3px;
+    border: 1px solid #666;
+}
+/* .prev{
+    display: inline;
+}
+.next{
+    display: inline;
+} */
+.slider-inner img{
+    display: none;
+    width: 900px;
+    height: 375px;
+    
+}
+
+.slider-inner img.active{
+    display: inline-block;
+}
+.prev,.next{
+    float: left;
+    margin-top: 130px;
+    cursor: pointer;
+}
+.prev{
+    position: relative;
+    margin-right: -45px;
+    z-index: 100;
+}
+.next{
+    position: relative;
+    margin-left: -45px;
+    z-index: 100;
 }
 /* can't get the flex model to work */
 article{
