--- a/css/main.css
+++ b/css/main.css
@@ -6,14 +6,8 @@ body{
 }
 h1,h2{
     font-family: 'Raleway', sans-serif;
-    /* border-style: inset; */
-    /* border-bottom: 3px solid #000; */
-    /* text-decoration-line: underline;  */
-    /* text-align: center;
-    padding: 10px; */
 }
 div.underline{
-    
     border-bottom: 3px solid #000;
 }
 
@@ -22,7 +16,8 @@ p{
     padding: 10px;
 }
 
-/* incomplete */
+/* NAV */
+/* NAV */
 nav{
     width: 100%;
     height: 75px;
@@ -38,7 +33,6 @@ nav h1{
     padding-top: 5px;
 }
 .nav-show{
-    /* display: none; */
     float: right;
     width:400px;
     padding-top: 13px;
@@ -57,7 +51,6 @@ nav h1{
 }
 .nav-hide{
     display: none;
-    /* background: #2b363b; */
 }
 .nav-hide{
     float: right;
@@ -80,13 +73,9 @@ nav a:hover{
     padding-bottom: 2px;
     border-bottom: 2px solid #00a97a;
 }
-/* nav li{
-    font-family: 'Raleway', sans-serif;
-    font-weight: bold;
-    display: inline;
-    list-style: none;
-    padding-right: 10px;
-} */
+
+/* HEADER */
+/* HEADER */
 header{
     padding-top: 75px;
     background: #00a97a;
@@ -95,8 +84,6 @@ header{
 }
 .head-wrapper{
     width: 100%;
-    /* display: flex;
-    align-items: row; */
 }
 
 .top-img{
@@ -108,16 +95,6 @@ header{
     clear: both;
     border-radius: 20px;
 }
-/* header h1{
-    margin-top: 25px;
-    text-align: center;
-    display: inline;
-    padding: 15px 10px;
-    border-bottom: 3px solid #fff;
-}
-header h2{
-    text-align: center;
-} */
 .head-text1 {
     margin-top: 50px;
     text-align: center;
@@ -144,78 +121,53 @@ header h2{
     padding: 30px;
     margin: 25px 100px;
 }
-main{
-    height: 150px;
-    clear: both;
-    
+
+/* MAIN */
+/* MAIN */
+.big-container{
+    width: 100%;
+    /* margin: 5% 15%; */
+    /* background: #0f0;*/
 }
-main h1{
+.con-head{
+    /* background: #ccc; */
     text-align: center;
+    /* display: inline; */
 }
-.container{
-    width: 80%;
+.slider-wrapper{
+    /* background: #f00; */
+    width: 90%;
     height: 100%;
-    margin: 80px auto;
-    overflow: auto;
-    /* clear: both; */
+    margin-left: 5%;
+    display: flex;
+    justify-content: column;
 }
-.slider-outer{
-    margin-left: 100px;
-    /* text-align: center; */
-}
-.slider-inner{
-    width: 800px;
-    height: 400px;
-    position: relative;
-    overflow: hidden;
-    margin: 0 auto;
-    display: inline;
-    float: left;
-    padding: 3px;
-    border: 1px solid #666;
-}
-/* .prev{
-    display: inline;
-}
-.next{
-    display: inline;
-} */
-.slider-inner img{
+.slider-wrapper img{
     display: none;
-    width: 800px;
-    height: 375px;
-    
+    width: 100%;
 }
 
-.slider-inner img.active{
+.slider-wrapper img.active{
     display: inline-block;
-}
+} 
+.slider-nav{
+    /* background: #00f; */
+    /* align-items: center; */
+    margin-top: 25px;
+    margin-left: 45%;
+    margin-right: 40%;
+} 
 
 
-.prev,.next{
-    float: left;
-    margin-top: 130px;
-    cursor: pointer;
-}
-.prev{
-    position: relative;
-    margin-right: -45px;
-    z-index: 100;
-}
-.next{
-    position: relative;
-    margin-left: -45px;
-    z-index: 100;
-}
 
-
-/* can't get the flex model to work */
+/* ARTICLE */
+/* ARTICLE */
 article{
     background: #00a97a;
     color: #fff;
     text-align: center;
     padding-top: 50px;
-}
+} 
 article h1{
     padding-top: 50px;
     display: inline;
@@ -224,14 +176,8 @@ article h1{
 }
 h1.testhead{
     text-align: center;
-    /* display: inline; */
-    
 }
-.test1,.test2,.test3{
-    /* width: 60%; */
-    padding-top: 35px;
-    text-align: center;
-}
+
 .quotes{
     padding: 50px 10px;
     display: none;
@@ -242,25 +188,11 @@ h1.testhead{
 .article-bottom{
     padding-bottom: 70px;
 }
-/* .test1,.test2,.test3 h1{
-    /* font-weight: 800; can't make it as bold as i want 
-    display: inline;
-    padding: 15px 10px;
-    border-bottom: 3px solid #fff;
-} */
-/* .test2{
-    padding-top: 35px;
-    text-align: center;
-} */
-/* .test2{
-    text-align: center;
-    padding: 30px;
-    margin: 25px 100px;
-} */
 
 
+/* ASIDE */
+/* ASIDE */
 aside{
-    /* width: 80%; */
     padding: 20px 15%;
     clear: both;
 }
@@ -274,18 +206,18 @@ aside h1{
     padding: 15px 10px;
     border-bottom: 3px solid #fff;
 }
+
+/* CONTACT */
+/* CONTACT */
 #f1 input{
     height: 25px;
-    /* border: none; */
     border-style: groove;
     border-radius: 2px;
     padding-left: 5px;
 }
-/* ??? some properties not working */
 .submit-button {
     width: 50px;
     height: 60px;
-    /* padding: 10px; */
     text-align: center;
     text-shadow: none;
     background: #00a97a;
@@ -344,10 +276,12 @@ aside h1{
     grid-gap: 15px;
     padding: 10px;
 }
+
+/* GO-TO-TOP */
+/* GO-TO-TOP */
 .go-top{
     width: 50px; 
     height: 30px; 
-    /* background-color: #203356; */
     position: fixed; 
     bottom:5%; 
     right: 1%;
@@ -360,6 +294,9 @@ aside h1{
     text-align: center;
     
 }
+
+/* FOOTER */
+/* FOOTER */
 footer{
     height:75px;
     background: #2b363b;
@@ -387,8 +324,10 @@ footer a{
     color: #fff;;
 }
 
-/* RESPONSIVENESS */
+/* RESPONSIVENESS  TABLET*/
 @media only screen and (max-width: 775px) {
+    /* NAV */
+    /* NAV */
     nav{
         width: 100%;
         height: 100px;
@@ -407,36 +346,19 @@ footer a{
         display: inline-block;
         float: right;
         margin-right: 2%;
-        margin-top: 5%;
-        /* position: fixed;
-        z-index: 1; */
-
-        
+        margin-top: 5%; 
     }
-    /* .nav-hide{
-        margin: 0;
-        padding: 5px;
-    } */
-    
     .nav-hide-bars:hover ~ .nav-hide{
         display: inline-block;
         background: #2b363b;
-        /* float: right; */
-        /* margin-right: 2%; */
-        
     }
-    /* .nav-hide-bars:hover ~ .nav-hide ul{
-        display: inline-block;
-    } */
     .nav-hide:hover{
         display: inline-block;
         background: #2b363b;
     }
 
-    .head-wrapper{
-        /* padding-top: 15px;  */
-    }
-
+    /* HEADER */
+    /* HEADER */
     .top-img{
         margin-top: 20px;
         padding-top: 15px; 
@@ -448,6 +370,23 @@ footer a{
         border-radius: 20px;
     }
 
+    /* MAIN SECTION */
+    /* MAIN SECTION */
+    .big-container{
+        margin: 5% 5%;
+        width: 90%;
+    }
+    .prev-button img{
+        margin-top: 80px;
+        width: 100%;
+    }
+    .next-button img{
+        margin-top: 80px;
+        width: 100%;
+    }
+
+    /* ARTICLE */
+    /* ARTICLE */
     .head-text1 {
         margin-top: 20px;
         text-align: center;
@@ -473,34 +412,39 @@ footer a{
         padding: 5px 5px 25px 5px;
         margin: 25px 100px;
     }
+
+    /* ASIDE */
+    /* ASIDE */
     .quotes{
         padding: 30px 20px;
         display: none;
     }
+
+    /* FOOTER */
+    /* FOOTER */
     footer{
         height: 125px;
     }
     footer h2{
-        /* float: left; */
         text-align: center;
         font-size: 14px;
         padding-top: 5px;
-        /* padding-left: 1%; */
         display: inline;
     }
     footer ul{
-        /* text-align: center; */
         margin-right: 5px;
         padding-top: 5px;
     }
     footer ul li{
-        /* text-align: center; */
         list-style: none;
         display: inline;
-        /* padding-left: 5px; */
     }
 }
-    @media only screen and (max-width: 450px) {
+
+/* RESPONSIVENESS SMARTPHONE */
+@media only screen and (max-width: 450px) {
+        /* NAV */
+        /* NAV */
         nav h1{
             padding-left: 35%;;
             padding-top: 5%;
@@ -524,28 +468,39 @@ footer a{
             padding: 3px; 
         }
         .nav-hide a{
-            
             padding-left: 0; 
         }
+
+        /* MAIN */
+        /* MAIN */
+        .big-container{
+            margin: 5% 5%;
+            width: 90%;
+            padding-bottom: 0;
+        }
+        .prev-button img{
+            margin-top: 40px;
+        }
+        .next-button img{
+            margin-top: 40px;
+        }
+
+        /* FOOTER */
+        /* FOOTER */
         footer h2{
-            /* float: left; */
             text-align: center;
             font-size: 14px;
             padding-top: 5px;
-            /* padding-left: 1%; */
             display: inline;
         }
         footer ul{
             text-align: center;
-            /* float: right; */
             margin-right: 130px;
             padding-top: 2px;
         }
         footer ul li{
-            /* float: right; */
             list-style: none;
             display: inline;
-            /* padding-left: 5px; */
     }
 
 
