--- a/css/main.css
+++ b/css/main.css
@@ -6,11 +6,6 @@ body{
 }
 h1,h2{
     font-family: 'Raleway', sans-serif;
-    /* border-style: inset; */
-    /* border-bottom: 3px solid #000; */
-    /* text-decoration-line: underline;  */
-    /* text-align: center;
-    padding: 10px; */
 }
 div.underline{
     
@@ -27,10 +22,13 @@ nav{
     width: 100%;
     height: 75px;
     position: fixed;
-    background: #2b363b;
+    background: #a74c00;
     color: #fff;
-    z-index: 1;
+    z-index: 2;
     clear: both;
+    box-shadow: 0 5px 10px #eee;
+    -webkit-box-shadow: 0 5px 10px #eee;
+    -moz-box-shadow: 0 10px 40px #eee;
 }
 nav h1{
     float: left;
@@ -75,49 +73,36 @@ nav h1{
 nav a{
     color: #fff;
     text-decoration: none;
+    padding: 3px;
+    margin-bottom: 3px;
 }
 nav a:hover{
     padding-bottom: 2px;
-    border-bottom: 2px solid #00a97a;
+    border-bottom: 2px solid #512d0f;
 }
-/* nav li{
-    font-family: 'Raleway', sans-serif;
-    font-weight: bold;
-    display: inline;
-    list-style: none;
-    padding-right: 10px;
-} */
+
 header{
-    padding-top: 75px;
-    background: #00a97a;
+    padding-top: 90px;
+    background: #da8136;
     color: #fff;
     
 }
 .head-wrapper{
+    padding-top: 60px; 
     width: 100%;
-    /* display: flex;
-    align-items: row; */
+   
 }
 
 .top-img{
-    margin-top: 40px;
+    margin-top: 60px;
     position: relative;
     left: 40.5%;
     width: 18%;
     display: block;
     clear: both;
+    border: 4px solid #a74c00;
     border-radius: 20px;
 }
-/* header h1{
-    margin-top: 25px;
-    text-align: center;
-    display: inline;
-    padding: 15px 10px;
-    border-bottom: 3px solid #fff;
-}
-header h2{
-    text-align: center;
-} */
 .head-text1 {
     margin-top: 50px;
     text-align: center;
@@ -152,66 +137,62 @@ main{
 main h1{
     text-align: center;
 }
+
+/* MAIN (SLIDER) */
+/* MAIN (SLIDER) */
+
 .container{
-    width: 80%;
+    /* background: #f00; */
+    width: 90%;
     height: 100%;
     margin: 80px auto;
-    overflow: auto;
-    /* clear: both; */
-}
-.slider-outer{
-    margin-left: 100px;
-    /* text-align: center; */
-}
-.slider-inner{
-    width: 800px;
-    height: 400px;
-    position: relative;
     overflow: hidden;
-    margin: 0 auto;
-    display: inline;
-    float: left;
-    padding: 3px;
-    border: 1px solid #666;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 }
-/* .prev{
-    display: inline;
-}
-.next{
-    display: inline;
-} */
-.slider-inner img{
-    display: none;
-    width: 800px;
-    height: 375px;
-    
-}
+.slider{
+    margin-top: 2%;
+    /* background: #00f; */
+    width: 95%;
+    margin-left: 2%;
+    height: 450px;
+    /* border: 2px solid #000; */
+    overflow: hidden;
+    /* margin-left: 5%; */
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 
-.slider-inner img.active{
+}
+.slide{
+    text-align: center;
+    display: none;
+}
+.slide.active{
     display: inline-block;
 }
+.slide img{
+    width: 100%;
+}
 
+.slider-nav{
+    margin-top: 2%;
+    /* background: #eee; */
+    margin-left: 45%;
 
-.prev,.next{
-    float: left;
-    margin-top: 130px;
-    cursor: pointer;
 }
 .prev{
-    position: relative;
-    margin-right: -45px;
-    z-index: 100;
+    /* margin-right: -45px; */
+    z-index: 1;
 }
 .next{
-    position: relative;
-    margin-left: -45px;
-    z-index: 100;
+    /* margin-left: -45px; */
+    z-index: 1;
 }
 
-
-/* can't get the flex model to work */
 article{
-    background: #00a97a;
+    background: #da8136;
     color: #fff;
     text-align: center;
     padding-top: 50px;
@@ -242,22 +223,6 @@ h1.testhead{
 .article-bottom{
     padding-bottom: 70px;
 }
-/* .test1,.test2,.test3 h1{
-    /* font-weight: 800; can't make it as bold as i want 
-    display: inline;
-    padding: 15px 10px;
-    border-bottom: 3px solid #fff;
-} */
-/* .test2{
-    padding-top: 35px;
-    text-align: center;
-} */
-/* .test2{
-    text-align: center;
-    padding: 30px;
-    margin: 25px 100px;
-} */
-
 
 aside{
     /* width: 80%; */
@@ -288,7 +253,7 @@ aside h1{
     /* padding: 10px; */
     text-align: center;
     text-shadow: none;
-    background: #00a97a;
+    background: #da8136;
     color: #fff;
     border-style: outset;
     border-radius: 15px;
@@ -362,7 +327,7 @@ aside h1{
 }
 footer{
     height:75px;
-    background: #2b363b;
+    background: #a74c00;
     color: #fff;
     width: 100%;
 }
@@ -420,7 +385,7 @@ footer a{
     
     .nav-hide-bars:hover ~ .nav-hide{
         display: inline-block;
-        background: #2b363b;
+        background: #a74c00;
         /* float: right; */
         /* margin-right: 2%; */
         
@@ -430,7 +395,7 @@ footer a{
     } */
     .nav-hide:hover{
         display: inline-block;
-        background: #2b363b;
+        background: #a74c00;
     }
 
     .head-wrapper{
@@ -438,8 +403,8 @@ footer a{
     }
 
     .top-img{
-        margin-top: 20px;
-        padding-top: 15px; 
+        margin-top: 55px;
+        padding-top: 0; 
         position: relative;
         left: 32%;
         width: 35%;
@@ -448,6 +413,35 @@ footer a{
         border-radius: 20px;
     }
 
+    /* MAIN SLIDER */
+    .container{
+        /* background: #f00;  */
+        margin: 40px auto;
+       
+    }
+    .slider-heading h1{
+        margin-bottom: 2%;
+        padding-bottom: 2%;
+    }
+    .slider{
+        height: 250px;
+        margin-bottom: 2%;
+        padding-bottom: 2%;
+    }
+    .slider-nav{
+        margin-top: 0;
+        padding-top: 0;
+        /* background: #eee; */
+        margin-left: 40%;
+    }
+    .prev{
+        margin-top: 5%;
+        z-index: 1;
+    }
+    .next{
+        margin-top: 5%;
+        z-index: 1;
+    }
     .head-text1 {
         margin-top: 20px;
         text-align: center;
@@ -478,19 +472,19 @@ footer a{
         display: none;
     }
     footer{
-        height: 125px;
+        height: 100px;
     }
     footer h2{
         /* float: left; */
         text-align: center;
         font-size: 14px;
-        padding-top: 5px;
+        padding-top: 15px;
         /* padding-left: 1%; */
         display: inline;
     }
     footer ul{
         /* text-align: center; */
-        margin-right: 5px;
+        margin-right: 45px;
         padding-top: 5px;
     }
     footer ul li{
@@ -524,8 +518,14 @@ footer a{
             padding: 3px; 
         }
         .nav-hide a{
-            
             padding-left: 0; 
+        }
+
+        /* MAIN (SLIDER) */
+        /* MAIN (SLIDER) */
+        .slider-nav{
+            margin-top: 0;
+            margin-left: 35%;
         }
         footer h2{
             /* float: left; */
@@ -534,6 +534,7 @@ footer a{
             padding-top: 5px;
             /* padding-left: 1%; */
             display: inline;
+            margin-left: -15%;
         }
         footer ul{
             text-align: center;
